added hoisting with token classification for appropriate size allocation
added relative jump psuedo op, single byte immediate ints, op code usage format logic, linking seperate from parsing, hoisting with named position hoisting (which requires classifying the size of the missing variable through op code usage formats to keep data aligned correctly until named position is defined), and better memory addresses that actually support addressing past the 256th byte

--- a/assembler/makefile
+++ b/assembler/makefile
@@ -16,7 +16,7 @@ SRCS_RAW_CPP = LOCFileManager.cpp LOCTokenProcessor.cpp LOCBitStream.cpp LOCInst
 SRCS_CPP = $(SRCS_RAW_CPP:LOC%=$(SRC_PATH)%) #LOC -> path to source files
 
 #source .h files (same path)
-SRCS_RAW_H = LOCFileManager.h LOCTokenProcessor.h LOCBitStream.h LOCInstructionLoader.h
+SRCS_RAW_H = LOCFileManager.h LOCTokenProcessor.h LOCBitStream.h LOCPushableBitSequence.h LOCInstructionLoader.h
 SRCS_H = $(SRCS_RAW_H:LOC%=$(SRC_PATH)%) #LOC -> path to source files
 
 #object .o files
