added doctest dependency for testing files

--- a/assembler/makefile
+++ b/assembler/makefile
@@ -5,15 +5,21 @@ CPPVERSION = -std=c++17
 
 #.out file name
 TARGET = assembler.out
+TEST_EXEC = tests.out
 
 #include directories, libraries, and library directory
-INCLUDE = -I$(SRC_PATH)
+INCLUDE = $(SRC_PATH) -IDependencies/
 
 #source .cpp files
 SRC_PATH = src/main/
 MAIN = assembler
 SRCS_RAW_CPP = LOCFileManager.cpp LOCTokenProcessor.cpp LOCBitStream.cpp LOCInstructionLoader.cpp LOCPushableBitSequence.cpp
 SRCS_CPP = $(SRCS_RAW_CPP:LOC%=$(SRC_PATH)%) #LOC -> path to source files
+
+TEST_PATH = src/test/
+TEST_OBJ_PATH = Dependencies/bin/test/
+TESTS_CPP = $(wildcard $(TEST_PATH)*.cpp)
+TESTS_OBJ := $(patsubst $(TEST_PATH)%.cpp,$(TEST_OBJ_PATH)%.o,$(TESTS_CPP))
 
 #source .h files (same path)
 SRCS_RAW_H = LOCFileManager.h LOCTokenProcessor.h LOCBitStream.h LOCPushableBitSequence.h LOCInstructionLoader.h
@@ -27,6 +33,7 @@ ENTRY = $(OBJ_PATH)$(MAIN).o
 
 #default compilation rule
 ALL: $(TARGET)
+	@mkdir -p $(OBJ_PATH)
 
 #Rule to generate the main target from the .o files (depends on .h files to ensure it recompiles often enough)
 $(TARGET) : $(OBJS) $(ENTRY) $(SRCS_H)
@@ -62,13 +69,31 @@ run_%:
 
 #clean .o and .out files
 clean:
-	@rm -f $(TARGET) $(OBJS) $(ENTRY) $(DEPS) $(GL_OBJ)
-	@rm -f $(TEST_OBJS)
-	@rm -rf $(TARGET).dSYM
+	@rm -f $(TARGET) $(OBJS) $(ENTRY) $(DEPS) $(TESTS_OBJ) $(TEST_EXEC)
+	@rm -rf $(TARGET).dSYM $(TEST_EXEC).dSYM
 	@echo "CLEANED"
 
 #clean .out file
 delete_exc:
-	@rm -f $(TARGET)
-	@rm -rf $(TARGET).dSYM
-	@echo "CLEANED EXECUTABLE"
+	@rm -f $(TARGET) $(TEST_EXEC)
+	@rm -rf $(TARGET).dSYM $(TEST_EXEC).dSYM
+	@echo "CLEANED EXECUTABLES"
+
+test_cases: $(TEST_EXEC)
+	@mkdir -p $(TEST_OBJ_PATH)
+TEST_CASES: $(TEST_EXEC)
+	@mkdir -p $(TEST_OBJ_PATH)
+
+$(TEST_EXEC): $(TESTS_OBJ)  $(OBJS) $(ENTRY) $(SRCS_H)
+	@$(CXX) $(CXXFLAGS) $(CPPVERSION) -o $(TEST_EXEC) $(OBJS) $(TESTS_OBJ) -I$(INCLUDE)
+	@echo "RECOMPILED TESTS"
+
+$(TEST_OBJ_PATH)%.o : $(TEST_PATH)%.cpp
+	@$(CXX) $(CXXFLAGS) $(CPPVERSION) -c -o $@ $< -I$(INCLUDE)
+
+CHECK_TESTS:
+	@make TEST_CASES -s
+	@./$(TEST_EXEC)
+check_tests:
+	@make TEST_CASES -s
+	@./$(TEST_EXEC)
